--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.26.0",
+    "localStorage": "^1.0.4",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-share": "^4.4.0",
-    "react-tooltip": "^4.2.21",
-    "uuid": "^8.3.2"
+    "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
