--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fast-levenshtein": "^3.0.0",
     "localStorage": "^1.0.4",
     "next": "12.1.0",
     "react": "17.0.2",
